package com.adm.backend.core.cluster;

import java.io.Serializable;

public interface ClusterNodeNotificationListener {
    public void handeNotification(Serializable var1);
}